# teratemplar

./: Cargo.toml  README.md
.github/workflows/: build_release.yml
src/: formats.rs  main.rs
tests/: basic.toml  basic_template.tera  integration.rs
